--- a/views/info.jade
+++ b/views/info.jade
@@ -6,7 +6,5 @@ for i in errs
   script.
     setTimeout(function(){sendNotification('error', '', "#{i}");}, 500);
 
-if loggedIn
-  .alert.alert-danger #[b REMINDER:] By using this site now, you are agreeing to be an Alpha Tester for an unstable web service. #[span.hidden-xs Please report any bugs or ideas you have on improving this site.]
-else
+if loggedIn == false
   .alert.alert-danger #[b WARNING:] OnTrac is in Alpha and should not yet be used for a reliable organization platform. Please help by becoming an Alpha Tester!
