Quote of the day on homepage  - I really need to do Latin

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -29,3 +29,23 @@
 #due-closest .progress, #due-today .progress {
   margin-bottom: 0;
 }
+
+.quote {
+  margin: 0;
+}
+
+.quote p b {
+  display: block;
+}
+
+.quote br {
+  display: none;
+}
+
+.quote p a {
+  font-size: 0.7em;
+}
+
+.quote p a:before {
+  content: "~"
+}
