--- a/views/home/ads.jade
+++ b/views/home/ads.jade
@@ -3,6 +3,6 @@
     img(src="/images/mumblead2.png")
   a(target="_blank", href="http://steamcommunity.com/groups/ludusregum")
     img(src="/images/steamgroup.png")
-  img(src="https://placeholdit.imgix.net/~text?txtsize=33&txt=SLIDE3&w=350&h=150")
-  img(src="https://placeholdit.imgix.net/~text?txtsize=33&txt=SLIDE4&w=350&h=150")
-  img(src="https://placeholdit.imgix.net/~text?txtsize=33&txt=SLIDE5&w=350&h=150")
+  img(src="https://placeholdit.imgix.net/~text?txtsize=33&txt=YOUR+AD+HERE&w=350&h=150")
+  img(src="https://placeholdit.imgix.net/~text?txtsize=33&txt=YOUR+AD+HERE&w=350&h=150")
+  img(src="https://placeholdit.imgix.net/~text?txtsize=33&txt=YOUR+AD+HERE&w=350&h=150")
