Loading signs for work boxes

--- a/views/home/work-boxes.jade
+++ b/views/home/work-boxes.jade
@@ -9,6 +9,7 @@
           img(style="width: 5em;", src="https://cdn3.iconfinder.com/data/icons/education/512/Booking-512.png")
       .col-xs-12.col-md-9
         .content
+          b Loading work...
         .progress(style="margin-top: 10px", data-toggle="tooltip", title="0% done!")
           .progress-bar(role='progressbar', aria-valuemin='0', aria-valuemax='100', style='width: 0%; background-color: #2780e3;')
 
@@ -24,5 +25,6 @@
           img(style="width: 5em;", src="https://cdn3.iconfinder.com/data/icons/education/512/Booking-512.png")
       .col-xs-12.col-md-9
         .content
+          b Loading work...
         .progress(style="margin-top: 10px", data-toggle="tooltip", title="0% done!")
           .progress-bar(role='progressbar', aria-valuemin='0', aria-valuemax='100', style='width: 0%; background-color: #9954bb;')
