--- a/views/work/homework.jade
+++ b/views/work/homework.jade
@@ -17,5 +17,6 @@
           .form-group.col-xs-12.col-sm-2
             button.btn.btn-default.full-when-xs#homework-button(style="width: 100%;") Add
     .row.worklist
+      .col-xs-12.col-md-6.text-center
+        span.larger Loading homework... Please wait.
   br
-  
