Primitive sidebar Mumbler list

--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -85,3 +85,7 @@ aside#sidebar
           span#sidebar-next-class
           i.right#nextclass-room
         hr
+  section
+    b Mumblers
+    #mumble-list
+    
