--- a/views/work/index.jade
+++ b/views/work/index.jade
@@ -38,6 +38,6 @@ block content
             tr
               td 
       .col-xs-12.col-sm-6.center
-        img(style="width: 100%; max-height: 500px;", src="/images/graph.png")
+        img(style="width: 100%; max-height: 400px; max-width: 400px;", src="/images/graph.png")
       .col-xs-12
         hr
