--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -91,6 +91,6 @@ aside#sidebar
     b Mumblers
     #mumble-list
   
-  section#period-countdown.text-center
+  section#period-countdown.text-center(title="The time until the end of the period.")
     h1 00:00
     
