Greatly improved homepage work boxes - It will alert a user if they haven't written any hw down now (for new users)

--- a/views/home/work-boxes.jade
+++ b/views/home/work-boxes.jade
@@ -4,12 +4,12 @@
       .panel-heading Today's Work
         a.fa.fa-list.right.undecorated(href="/work")
     .panel-body
-      .col-xs-12.col-md-3.text-center.hidden-xs.hidden-sm(style="padding: 0;")
+      .col-xs-12.col-md-3.text-center.hidden-xs.hidden-sm.box-picture(style="padding: 0;")
         a(href="/work/today")
           img(style="width: 5em;", src="https://cdn3.iconfinder.com/data/icons/education/512/Booking-512.png")
       .col-xs-12.col-md-9
         .content
-          b Loading work...
+          b.text-muted Loading work...
         .progress(style="margin-top: 10px", data-toggle="tooltip", title="0% done!")
           .progress-bar(role='progressbar', aria-valuemin='0', aria-valuemax='100', style='width: 0%; background-color: #2780e3;')
 
@@ -20,11 +20,11 @@
       .panel-heading Upcoming Work
         a.fa.fa-list.right.undecorated(href="/work")
     .panel-body
-      .col-xs-12.col-md-3.text-center.hidden-xs.hidden-sm(style="padding: 0;")
+      .col-xs-12.col-md-3.text-center.hidden-xs.hidden-sm.box-picture(style="padding: 0;")
         a(href="/work/closest")
           img(style="width: 5em;", src="https://cdn3.iconfinder.com/data/icons/education/512/Booking-512.png")
       .col-xs-12.col-md-9
         .content
-          b Loading work...
+          b.text-muted Loading work...
         .progress(style="margin-top: 10px", data-toggle="tooltip", title="0% done!")
           .progress-bar(role='progressbar', aria-valuemin='0', aria-valuemax='100', style='width: 0%; background-color: #9954bb;')
