--- a/views/work/index.jade
+++ b/views/work/index.jade
@@ -37,7 +37,6 @@ block content
           table.table.table-condensed
             tr
               td 
-      .col-xs-12.col-sm-6.center
-        img(style="width: 100%; max-height: 400px; max-width: 400px;", src="/images/graph.png")
-      .col-xs-12
+      .col-xs-12.col-md-6.center
+        #work-calendar
         hr
