Moved calendar to index page - Created new work route to return data - Added schedule-days to calendar

--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -36,9 +36,6 @@ block content
       .col-xs-12
         include tabs
     .row
-      .col-xs-12
-        br
-        p.
-          Now remember, OnTrac is in Alpha. This means it is nowhere near done.
-          That explains this empty homepage.
+      .col-xs-12.col-md-6
+        #work-calendar
     hr
