--- a/views/home/ads.jade
+++ b/views/home/ads.jade
@@ -1,5 +1,5 @@
 #advertisements
-  a(href="mumble://"+currentUser.username+":regis@regismumble.ddns.net/School?version=1.2.0")
+  a(href="mumble://"+currentUser.username+":regis@www.getontrac.info/School?version=1.2.0")
     img(src="/images/mumblead2.png")
   a(target="_blank", href="http://steamcommunity.com/groups/ludusregum")
     img(src="/images/steamgroup.png")
