--- a/views/work/index.jade
+++ b/views/work/index.jade
@@ -14,11 +14,12 @@ block content
         span(data-toggle="tooltip", title="Hooray!") 0 projects
 
     .row
-      .col-xs-12.visible-xs
-        if currentUser.scheduleObject.scheduleDays[moment().format("MM/DD/YY")]
-          a.btn.btn-default(href="/work/today", title="View the work due today!") Today's Work
-        a.btn.btn-default(href="/work/closest", title="Find the closest day from today that you have work!") Closest Work Day
-        
+      .col-xs-12
+        div(style="background-color: #222;")
+          if currentUser.scheduleObject.scheduleDays[moment().format("MM/DD/YY")]
+            a.btn.btn-default(href="/work/today", title="View the work due today!") Today's Work
+          a.btn.btn-default(href="/work/closest", title="Find the closest day from today that you have work!") Next Day's Work
+          
       .col-xs-12.col-sm-6.col-md-3#due-today
         .page-header
           h2 Due Today
@@ -26,6 +27,9 @@ block content
         
         .col-xs-12
           p.text-center &nbsp;
+          table.table.table-condensed
+            tr
+              td 
       
       .col-xs-12.col-sm-6.col-md-3#upcoming(data-closest=closestDay)
         .page-header
