GREATLY improved work index JS

--- a/views/work/index.jade
+++ b/views/work/index.jade
@@ -41,6 +41,6 @@ block content
           table.table.table-condensed
             tr
               td 
-      .col-xs-12.col-md-6.center
-        #work-calendar
+      .col-xs-12.col-md-4.center
+        #hw-calendar
         hr
