MASSIVE CALENDAR REMAKE

--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -36,6 +36,6 @@ block content
       .col-xs-12
         include tabs
     .row
-      .col-xs-12.col-md-6
+      .col-xs-12
         #work-calendar
     hr
