--- a/views/home/work-boxes.jade
+++ b/views/home/work-boxes.jade
@@ -14,7 +14,7 @@
           .progress-bar(role='progressbar', aria-valuemin='0', aria-valuemax='100', style='width: 0%; background-color: #2780e3;')
 
 
-.col-xs-12.col-sm-6.col-lg-4#due-closest(data-closest=moment(nextCD, "MM/DD/YY").format("YYYY-MM-DD"))
+.col-xs-12.col-sm-6.col-lg-4#due-closest(data-closest=nextCD)
   .panel.panel-info
     a.undecorated(href="/work/closest")
       .panel-heading Upcoming Work
