--- a/views/work/index.jade
+++ b/views/work/index.jade
@@ -16,7 +16,7 @@ block content
     .row
       .col-xs-12
         div(style="background-color: #222;")
-          if currentUser.scheduleObject.scheduleDays[moment().format("MM/DD/YY")]
+          if currentUser.scheduleObject.scheduleDays[moment().format("YYYY-MM-DD")]
             a.btn.btn-default(href="/work/today", title="View the work due today!") Today's Work
           a.btn.btn-default(href="/work/closest", title="Find the closest day from today that you have work!") Next Day's Work
           
