At user request, made login button more obvious

--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -106,4 +106,5 @@ header
                   a(href='/logout') Logout
           else
             li
-              a(href="#", data-toggle="modal", data-target="#login-modal") Not Logged In
+              a(href="#", data-toggle="modal", data-target="#login-modal")
+                b Log In
