--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -32,8 +32,24 @@ aside#sidebar
         hr(style="margin-bottom: 10px;")
         b.larger #{todaysInfo.scheduleDay} - Day
         hr(style="margin-top: 10px;")
-      
+
   if todaysInfo && moment().isBefore(moment().hour(15))
+    if isHomepage == false
+      section#sidebar-class-info
+        #sd-nowc
+          b.larger Current Class
+          
+          br
+          span#sidebar-now-class
+          i.right#nowclass-room
+          br
+        #sd-nextc
+          br
+          b Next Class
+          br
+          span#sidebar-next-class
+          i.right#nextclass-room
+        hr
     hr
     section#todays-schedule
       span(title=todaysInfo.scheduleDay)
@@ -61,28 +77,12 @@ aside#sidebar
               else
                 | #{s.className.split("(")[0]}
   
-  if todaysInfo
-    if isHomepage == false
-      section#sidebar-class-info
-        #sd-nowc
-          b.larger Current Class
-          
-          br
-          span#sidebar-now-class
-          i.right#nowclass-room
-          br
-        #sd-nextc
-          br
-          b Next Class
-          br
-          span#sidebar-next-class
-          i.right#nextclass-room
-        hr
+  
   section
     b Mumblers
     #mumble-list
   
   if todaysInfo
     section#period-countdown.text-center(title="The time until the end of the period.")
-      h1 00:00
+      h1 Loading...
     
