--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -57,11 +57,13 @@ aside#sidebar
       ul.list-group
         for s in todaysInfo.periods
           if s.className.indexOf(" Advisement") == -1
-            li(data-mID=s.mID, title=s.startTime+" - "+s.endTime+" in "+s.room, data-toggle="tooltip", class=(s.className=="Lunch" ? "disabled" : "")).list-group-item
+            li(data-mID=s.mID, title=s.startTime+" - "+s.endTime, data-toggle="tooltip", class=(s.className=="Lunch" ? "disabled" : "")).list-group-item
               if s.mID
                 a.undecorated(style="text-decoration: none;", target="_blank", href="http://moodle.regis.org/course/view.php?id="+s.mID)= s.className.split("(")[0]
               else
                 | #{s.className.split("(")[0]}
+              small.text-muted.right= helpers.showRoom(s.room)
+              
   if nextSD && (todaysInfo == undefined || moment().isAfter(moment().hour(15)))
     hr
     section#next-schedule
@@ -71,12 +73,12 @@ aside#sidebar
       ul.list-group
         for s in currentUser.scheduleObject.dayClasses[nextSD]
           if s.className.indexOf(" Advisement") == -1
-            li(data-mID=s.mID, title=s.startTime+" - "+s.endTime+" in "+s.room, data-toggle="tooltip", class=(s.className=="Lunch" ? "disabled" : "")).list-group-item
+            li(data-mID=s.mID, title=s.startTime+" - "+s.endTime, data-toggle="tooltip", class=(s.className=="Lunch" ? "disabled" : "")).list-group-item
               if s.mID
                 a.undecorated(style="text-decoration: none;", target="_blank", href="http://moodle.regis.org/course/view.php?id="+s.mID)= s.className.split("(")[0]
               else
                 | #{s.className.split("(")[0]}
-  
+              small.text-muted.right= helpers.showRoom(s.room)
   
   section#mumble-section
     b On Mumble Now
